// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker should have a helptext 1`] = `
<div>
  <div class="form-group">
    <div class="input-group">
      <div class="input-group-item"><input class="form-control input-group-inset input-group-inset-after" ref="inputElement" type="text" value="">
        <div class="input-group-inset-item input-group-inset-item-after"><button class="btn d-none d-md-inline-block btn-unstyled" aria-label="calendar" type="button"><svg class="lexicon-icon lexicon-icon-calendar" focusable="false" role="presentation">
              <use xlink:href="icons.svg#calendar"></use>
            </svg></button></div>
      </div>
      <div class="dropdown-menu">
        <div class="datepicker">
          <div class="weekdays">
            <div class="week">S</div>
            <div class="week">M</div>
            <div class="week">T</div>
            <div class="week">W</div>
            <div class="week">T</div>
            <div class="week">F</div>
            <div class="week">S</div>
          </div>
        </div>
      </div>
    </div><span class="form-text">Type something</span>
  </div>
</div>
`;

exports[`DatePicker should have a label 1`] = `
<div>
  <div class="form-group"><label>label </label>
    <div class="input-group">
      <div class="input-group-item"><input class="form-control input-group-inset input-group-inset-after" ref="inputElement" type="text" value="">
        <div class="input-group-inset-item input-group-inset-item-after"><button class="btn d-none d-md-inline-block btn-unstyled" aria-label="calendar" type="button"><svg class="lexicon-icon lexicon-icon-calendar" focusable="false" role="presentation">
              <use xlink:href="icons.svg#calendar"></use>
            </svg></button></div>
      </div>
      <div class="dropdown-menu">
        <div class="datepicker">
          <div class="weekdays">
            <div class="week">S</div>
            <div class="week">M</div>
            <div class="week">T</div>
            <div class="week">W</div>
            <div class="week">T</div>
            <div class="week">F</div>
            <div class="week">S</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker should have a predefinedValue 1`] = `
<div>
  <div class="form-group">
    <div class="input-group">
      <div class="input-group-item"><input class="form-control input-group-inset input-group-inset-after" ref="inputElement" type="text" value="05/05/2019">
        <div class="input-group-inset-item input-group-inset-item-after"><button class="btn d-none d-md-inline-block btn-unstyled" aria-label="calendar" type="button"><svg class="lexicon-icon lexicon-icon-calendar" focusable="false" role="presentation">
              <use xlink:href="icons.svg#calendar"></use>
            </svg></button></div>
      </div>
      <div class="dropdown-menu">
        <div class="datepicker">
          <div class="weekdays">
            <div class="week">S</div>
            <div class="week">M</div>
            <div class="week">T</div>
            <div class="week">W</div>
            <div class="week">T</div>
            <div class="week">F</div>
            <div class="week">S</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker should have an id 1`] = `
<div>
  <div class="form-group">
    <div class="input-group" id="ID">
      <div class="input-group-item"><input class="form-control input-group-inset input-group-inset-after" ref="inputElement" type="text" value="">
        <div class="input-group-inset-item input-group-inset-item-after"><button class="btn d-none d-md-inline-block btn-unstyled" aria-label="calendar" type="button"><svg class="lexicon-icon lexicon-icon-calendar" focusable="false" role="presentation">
              <use xlink:href="icons.svg#calendar"></use>
            </svg></button></div>
      </div>
      <div class="dropdown-menu">
        <div class="datepicker">
          <div class="weekdays">
            <div class="week">S</div>
            <div class="week">M</div>
            <div class="week">T</div>
            <div class="week">W</div>
            <div class="week">T</div>
            <div class="week">F</div>
            <div class="week">S</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
